--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="./style/style.css">
 	<script src="./dist/main.js" defer></script>
+	<script src="https://widget.cloudpayments.ru/bundles/cloudpayments"></script>
 	<title>O-ZONE GLO ACADEMY</title>
 </head>
 
